--- a/final/styles/trainers.css
+++ b/final/styles/trainers.css
@@ -23,7 +23,7 @@ body {
     margin: 0;
     font-family: "Roboto", sans-serif;
     background: var(--lightgraycolor);
-    color: var(--blackcolor);
+    
     min-height: 100vh;
 }
 
@@ -231,7 +231,6 @@ main {
 
 .trainer-modal-content p {
     margin: 6px 0;
-    font-size: 0.95rem;
     color: var(--bluecolor);
     font-size: large;
 }
